k8s/app/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: nagp-k8s-demo
  name: employee-app
  labels:
    app: employee-app
    tier: service-api
spec:
  replicas: 4
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 0
  selector:
    matchLabels:
      app: api-tier
  template:
    metadata:
      labels:
        app: api-tier
    spec:
      containers:
        - name: web-api
          image: anishaprajapa03/k8s-demo-app:latest
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 8080
              name: http
          readinessProbe:
            httpGet:
              path: /healthz
              port: 8080
            initialDelaySeconds: 10
            periodSeconds: 5
            timeoutSeconds: 2
            failureThreshold: 3
          livenessProbe:
            httpGet:
              path: /healthz
              port: 8080
            initialDelaySeconds: 15
            periodSeconds: 10
            timeoutSeconds: 2
            failureThreshold: 3
          resources:
            requests:
              cpu: "50m"
              memory: "96Mi"
            limits:
              cpu: "200m"
              memory: "256Mi"
