k8s/app/service.yaml
apiVersion: v1
kind: Service
metadata:
  namespace: nagp-k8s-demo
  name: app-service
  labels:
    app: employee-app
    tier: service-api
spec:
  type: ClusterIP
  ports:
    - port: 80
      targetPort: 8080
      protocol: TCP
  selector:
    app: api-tier
